{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 272,
  "lineage": "83f9c85a-6719-a98d-1fe8-7d7ad9cce375",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e73ea2660181ae09",
            "arn": "arn:aws:ec2:us-west-2:992382777416:elastic-ip/eipalloc-0e73ea2660181ae09",
            "domain": "vpc",
            "id": "eipalloc-0e73ea2660181ae09",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-217-245-121.us-west-2.compute.amazonaws.com",
            "public_ip": "34.217.245.121",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "mzc-user05-nat-eip"
            },
            "tags_all": {
              "Name": "mzc-user05-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:internet-gateway/igw-0bdcda3117e244c3d",
            "id": "igw-0bdcda3117e244c3d",
            "owner_id": "992382777416",
            "tags": {
              "Name": "mzc-user05-igw"
            },
            "tags_all": {
              "Name": "mzc-user05-igw"
            },
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382777416:loadbalancer/app/mzc-user05-alb/c640148ea22b4386",
            "arn_suffix": "app/mzc-user05-alb/c640148ea22b4386",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mzc-user05-alb-948540011.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382777416:loadbalancer/app/mzc-user05-alb/c640148ea22b4386",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mzc-user05-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fce3ddfc72a1fb0d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05d0fa7a60dfe57af"
              },
              {
                "subnet_id": "subnet-0b80d643d167a1179"
              }
            ],
            "subnets": [
              "subnet-05d0fa7a60dfe57af",
              "subnet-0b80d643d167a1179"
            ],
            "tags": {
              "Name": "mzc-user05-alb"
            },
            "tags_all": {
              "Name": "mzc-user05-alb"
            },
            "vpc_id": "vpc-05cf0744540473ff3",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382777416:listener/app/mzc-user05-alb/c640148ea22b4386/abb00feed9d06d34",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:992382777416:targetgroup/mzc-user05-app-tg/06d502199693db3e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382777416:listener/app/mzc-user05-alb/c640148ea22b4386/abb00feed9d06d34",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:992382777416:loadbalancer/app/mzc-user05-alb/c640148ea22b4386",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:992382777416:targetgroup/mzc-user05-app-tg/06d502199693db3e",
            "arn_suffix": "targetgroup/mzc-user05-app-tg/06d502199693db3e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:992382777416:targetgroup/mzc-user05-app-tg/06d502199693db3e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mzc-user05-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "mzc-user05-app-tg"
            },
            "tags_all": {
              "Name": "mzc-user05-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e73ea2660181ae09",
            "association_id": "eipassoc-03dcd328f75cb2c47",
            "connectivity_type": "public",
            "id": "nat-0b9b88b5330985315",
            "network_interface_id": "eni-0deb19f9d57c94fef",
            "private_ip": "10.10.1.142",
            "public_ip": "34.217.245.121",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05d0fa7a60dfe57af",
            "tags": {
              "Name": "mzc-user05-nat-gw"
            },
            "tags_all": {
              "Name": "mzc-user05-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:route-table/rtb-008c13e6678bc9552",
            "id": "rtb-008c13e6678bc9552",
            "owner_id": "992382777416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b9b88b5330985315",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mzc-user05-private-rt-us-west-2a"
            },
            "tags_all": {
              "Name": "mzc-user05-private-rt-us-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:route-table/rtb-08b77daaa712e2a58",
            "id": "rtb-08b77daaa712e2a58",
            "owner_id": "992382777416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b9b88b5330985315",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mzc-user05-private-rt-us-west-2b"
            },
            "tags_all": {
              "Name": "mzc-user05-private-rt-us-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:route-table/rtb-038a7f2f2b7445645",
            "id": "rtb-038a7f2f2b7445645",
            "owner_id": "992382777416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bdcda3117e244c3d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mzc-user05-public-rt"
            },
            "tags_all": {
              "Name": "mzc-user05-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-026f1d8e3e162b663",
            "route_table_id": "rtb-008c13e6678bc9552",
            "subnet_id": "subnet-0e1e640e163a03deb"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_1",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c8db575daf44273",
            "route_table_id": "rtb-08b77daaa712e2a58",
            "subnet_id": "subnet-0363a707b483b71e8"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private_2",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd3fee8645d79258",
            "route_table_id": "rtb-038a7f2f2b7445645",
            "subnet_id": "subnet-05d0fa7a60dfe57af"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f26e0746e5a64708",
            "route_table_id": "rtb-038a7f2f2b7445645",
            "subnet_id": "subnet-0b80d643d167a1179"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:security-group/sg-0fce3ddfc72a1fb0d",
            "description": "Allow HTTP/HTTPS traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fce3ddfc72a1fb0d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mzc-user05-alb-sg",
            "name_prefix": "",
            "owner_id": "992382777416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mzc-user05-alb-sg"
            },
            "tags_all": {
              "Name": "mzc-user05-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:security-group/sg-098445f31c9f3d914",
            "description": "Allow traffic from ALB and outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-098445f31c9f3d914",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fce3ddfc72a1fb0d"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mzc-user05-ec2-sg",
            "name_prefix": "",
            "owner_id": "992382777416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mzc-user05-ec2-sg"
            },
            "tags_all": {
              "Name": "mzc-user05-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:security-group/sg-0357765e0ec4d9854",
            "description": "Allow database traffic from EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0357765e0ec4d9854",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow DB traffic from EC2 SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-098445f31c9f3d914"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mzc-user05-rds-sg",
            "name_prefix": "",
            "owner_id": "992382777416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mzc-user05-rds-sg"
            },
            "tags_all": {
              "Name": "mzc-user05-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:security-group/sg-0f984cc97af03188d",
            "description": "Allow HTTPS from within VPC for Interface Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f984cc97af03188d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mzc-user05-vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "992382777416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mzc-user05-vpc-endpoint-sg"
            },
            "tags_all": {
              "Name": "mzc-user05-vpc-endpoint-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:subnet/subnet-0e1e640e163a03deb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.128.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1e640e163a03deb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mzc-user05-private-subnet-us-west-2a",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "mzc-user05-private-subnet-us-west-2a",
              "Tier": "Private"
            },
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:subnet/subnet-0363a707b483b71e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.132.0/22",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0363a707b483b71e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mzc-user05-private-subnet-us-west-2b",
              "Tier": "Private"
            },
            "tags_all": {
              "Name": "mzc-user05-private-subnet-us-west-2b",
              "Tier": "Private"
            },
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:subnet/subnet-05d0fa7a60dfe57af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d0fa7a60dfe57af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mzc-user05-public-subnet-us-west-2a",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "mzc-user05-public-subnet-us-west-2a",
              "Tier": "Public"
            },
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:subnet/subnet-0b80d643d167a1179",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b80d643d167a1179",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382777416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mzc-user05-public-subnet-us-west-2b",
              "Tier": "Public"
            },
            "tags_all": {
              "Name": "mzc-user05-public-subnet-us-west-2b",
              "Tier": "Public"
            },
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:vpc/vpc-05cf0744540473ff3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b8a7f8d111cdfe21",
            "default_route_table_id": "rtb-0a5a0e6c9cb2e8cd9",
            "default_security_group_id": "sg-048b7522316b06264",
            "dhcp_options_id": "dopt-03cb275c7ccef02fd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05cf0744540473ff3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5a0e6c9cb2e8cd9",
            "owner_id": "992382777416",
            "tags": {
              "Name": "mzc-user05-vpc"
            },
            "tags_all": {
              "Name": "mzc-user05-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:vpc-endpoint/vpce-075a5cb8e4a9d1c0c",
            "dns_entry": [
              {
                "dns_name": "vpce-075a5cb8e4a9d1c0c-6fw5fxjl.ec2messages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-075a5cb8e4a9d1c0c-6fw5fxjl-us-west-2b.ec2messages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-075a5cb8e4a9d1c0c-6fw5fxjl-us-west-2a.ec2messages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "ec2messages.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z07196921I7H1OGTP5OOE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-075a5cb8e4a9d1c0c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0859c39f93bea6895",
              "eni-0d913037738047128"
            ],
            "owner_id": "992382777416",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f984cc97af03188d"
            ],
            "service_name": "com.amazonaws.us-west-2.ec2messages",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.130.37",
                "subnet_id": "subnet-0e1e640e163a03deb"
              },
              {
                "ipv4": "10.10.133.53",
                "subnet_id": "subnet-0363a707b483b71e8"
              }
            ],
            "subnet_ids": [
              "subnet-0363a707b483b71e8",
              "subnet-0e1e640e163a03deb"
            ],
            "tags": {
              "Name": "mzc-user05-ec2messages-endpoint"
            },
            "tags_all": {
              "Name": "mzc-user05-ec2messages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:vpc-endpoint/vpce-0d55933011376d75f",
            "dns_entry": [
              {
                "dns_name": "vpce-0d55933011376d75f-a7so98u1.ssm.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0d55933011376d75f-a7so98u1-us-west-2b.ssm.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0d55933011376d75f-a7so98u1-us-west-2a.ssm.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "ssm.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z05302021IJQBY1DMTRAF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d55933011376d75f",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-001b4cf4c8c20e5fa",
              "eni-032129173cd7e6efc"
            ],
            "owner_id": "992382777416",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f984cc97af03188d"
            ],
            "service_name": "com.amazonaws.us-west-2.ssm",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.131.162",
                "subnet_id": "subnet-0e1e640e163a03deb"
              },
              {
                "ipv4": "10.10.132.110",
                "subnet_id": "subnet-0363a707b483b71e8"
              }
            ],
            "subnet_ids": [
              "subnet-0363a707b483b71e8",
              "subnet-0e1e640e163a03deb"
            ],
            "tags": {
              "Name": "mzc-user05-ssm-endpoint"
            },
            "tags_all": {
              "Name": "mzc-user05-ssm-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382777416:vpc-endpoint/vpce-05bf0929c51ebd8d1",
            "dns_entry": [
              {
                "dns_name": "vpce-05bf0929c51ebd8d1-3r8powor.ssmmessages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-05bf0929c51ebd8d1-3r8powor-us-west-2a.ssmmessages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-05bf0929c51ebd8d1-3r8powor-us-west-2b.ssmmessages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "ssmmessages.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z0720130240CSKTEEFMTG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05bf0929c51ebd8d1",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0dbe5a02382217b6a",
              "eni-0f9ca32659ef272ed"
            ],
            "owner_id": "992382777416",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f984cc97af03188d"
            ],
            "service_name": "com.amazonaws.us-west-2.ssmmessages",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.10.131.107",
                "subnet_id": "subnet-0e1e640e163a03deb"
              },
              {
                "ipv4": "10.10.133.207",
                "subnet_id": "subnet-0363a707b483b71e8"
              }
            ],
            "subnet_ids": [
              "subnet-0363a707b483b71e8",
              "subnet-0e1e640e163a03deb"
            ],
            "tags": {
              "Name": "mzc-user05-ssmmessages-endpoint"
            },
            "tags_all": {
              "Name": "mzc-user05-ssmmessages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-05cf0744540473ff3"
          },
          "dependencies": [
            "aws_security_group.vpc_endpoint_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}